--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,33 @@
             margin: 0;
         }
 
+        #container {
+            position: fixed;
+            padding: 0;
+            margin: 0;
+
+            top: 0;
+            left: 0;
+
+            width: 100%;
+            height: 100%;
+            background: rgba(255, 255, 255, 0.5);
+        }
+
+        .instructions {
+            opacity: 0.8;
+            z-index: 1;
+            position: absolute;
+            width: 150px;
+            height: 200px;
+            top: 20px;
+            left: 170px;
+            border: 1px dashed #990000;
+            background-color: #ffdddd;
+            /* text-align: center; */
+
+        }
+
         /* #container {
             width: 100%;
             height: 100%;
@@ -49,7 +76,7 @@
             background-position: calc(50% - 1px) calc(50% - 1px),
             calc(50% + 1px) calc(50% + 1px);
             filter: brightness(2) invert(1) grayscale(1);
-            box-shadow: inset 0 0 0 1px black;
+            /* box-shadow: inset 0 0 0 1px black; */
             /* } */
         }
     </style>
@@ -57,33 +84,31 @@
 </head>
 
 <body>
-
-    <!-- <div id="container">
-
-        <img id="img">
-
-    </div> -->
-
-    <!-- <div class="row">
-        <div class="column">
-            <img id="img" style="width:100%">
+    <div id="container">
+        <div class="instructions">
+            <p>Press key for effect</p>
+            <ul>
+                <li>x: xray</li>
+                <li>n: night vision</li>
+                <li>w: warhole</li>
+            </ul>
         </div>
-        <div class="column">
-            <img id="img2" style="width:100%">
-        </div>
-        <div class="column" style="width:100%;height:100%;">
-            <div id="img3" style="width:100%;height:100%"></div>
-
-        </div>
-    </div> -->
-    <!-- <div class="row">
-        <input type="button" id="drawing" value="make illustration">
-    </div> -->
-
+    </div>
 
 
     <script>
         (function () {
+
+            function reset(){
+                var container = document.getElementById('container');
+                container.style.background = '';
+                container.style.backgroundSize = '';
+                container.style.backgroundRepeat = '';
+                container.style.backgroundSize = '';
+                container.style.backgroundRepeat = '';
+                container.style.backgroundBlendMode = '';
+                container.style.filter = '';
+            }
             var image = '';
             "use strict";
 
@@ -95,22 +120,37 @@
             document.onkeydown = function (evt) {
                 evt = evt || window.event;
                 if (evt.keyCode == 78 || evt.keyCode == 110) { //N
-                    var body = document.getElementsByTagName('body')[0];
-                    body.style.backgroundPosition = '';
-                    body.style.filter = '';
+                    reset();
+                    var container = document.getElementById('container');
+                    container.style.backgroundPosition = '';
+                    container.style.filter = '';
                     var rgrad = 'radial-gradient(rgba(0,255,0,.8),green)';
                     var repeatGrad =
                         'repeating-linear-gradient(transparent 0,rgba(0,0,0,.2) 3px,transparent 6px)';
-                    body.style.background = `url(${image}), ${rgrad},${repeatGrad}`;
-                    body.style.backgroundBlendMode = "overlay";
-                    body.style.backgroundSize = "cover";
-                } else if (evt.keyCode == 88 || evt.keyCode == 120) {
-                    var body = document.getElementsByTagName('body')[0];
-                    // body.setAttribute("class", "pencil-effect");
-                    body.style.backgroundSize = 'cover';
-                    body.style.backgroundBlendMode = 'difference';
-                    body.style.backgroundPosition = "1px 1px, 2px 2px";
-                    body.style.filter = 'brightness(3) invert(1) grayscale(1)';
+                    container.style.background = `url(${image}), ${rgrad},${repeatGrad}`;
+                    container.style.backgroundBlendMode = "overlay";
+                    container.style.backgroundSize = "cover";
+                } else if (evt.keyCode == 88 || evt.keyCode == 120) { //x
+                    reset();
+                    var container = document.getElementById('container');
+                    // container.setAttribute("class", "pencil-effect");
+                    container.style.background = `url(${image})`, `url(${image})`;
+                    container.style.backgroundSize = 'cover';
+                    container.style.backgroundBlendMode = 'difference';
+                    container.style.backgroundPosition = "1px 1px, 2px 2px";
+                    container.style.filter = 'brightness(3) invert(1) grayscale(1)';
+                } else if (evt.keyCode == "w".charCodeAt(0) || evt.keyCode == "W".charCodeAt(0)) { //b
+                    reset();    
+                    var container = document.getElementById('container');
+                    var linGrad1 = 'linear-gradient(#14EBFF 0,#14EBFF 50%,#FFFF70 50%,#FFFF70 100%)';
+                    var linGrad2 = 'linear-gradient(#FF85DA 0,#FF85DA 50%,#AAA 50%,#AAA 100%)';
+
+                    container.style.background = `${linGrad1},${linGrad2}, url(${image})`;
+                    container.style.backgroundSize = '50% 100%, 50% 100%, 50% 50%';
+                    container.style.backgroundRepeat = 'no-repeat, no-repeat, repeat';
+                    container.style.backgroundSize = '50% 100%, 50% 100%, 50% 50%';
+                    container.style.backgroundBlendMode = 'color';
+
                 }
             };
 
@@ -130,8 +170,21 @@
                 // img.style.backgroundImage = `url(${data.data})`, `url(${data.data})`;
                 // img.setAttribute("class", "pencil-effect");
 
-                var body = document.getElementsByTagName('body');
-                body[0].style.backgroundImage = `url(${data.data})`, `url(${data.data})`;
+                // var body = document.getElementsByTagName('body');
+                // body[0].style.backgroundImage = `url(${data.data})`, `url(${data.data})`;
+
+                var container = document.getElementById('container');
+                // container.style.background = '';
+                // container.style.backgroundSize = '';
+                // container.style.backgroundRepeat = '';
+                // container.style.backgroundSize = '';
+                // container.style.backgroundRepeat = '';
+                // container.style.backgroundBlendMode = '';
+                reset();
+                container.style.backgroundImage = `url(${data.data})`, `url(${data.data})`;
+                
+
+
                 // body[0].setAttribute("class", "pencil-effect");
                 // body[0].style.backgroundSize = 'cover';
                 // body[0].style.backgroundBlendMode = 'difference';
