--- a/www/index.html
+++ b/www/index.html
@@ -88,9 +88,11 @@
         <div class="instructions">
             <p>Press key for effect</p>
             <ul>
+                <li>o: original</li>
                 <li>x: xray</li>
                 <li>n: night vision</li>
                 <li>w: warhole</li>
+                <li>s: smoke</li>
             </ul>
         </div>
     </div>
@@ -119,7 +121,7 @@
 
             document.onkeydown = function (evt) {
                 evt = evt || window.event;
-                if (evt.keyCode == 78 || evt.keyCode == 110) { //N
+                if (evt.keyCode == "n".charCodeAt(0) || evt.keyCode == "N".charCodeAt(0)) { //N
                     reset();
                     var container = document.getElementById('container');
                     container.style.backgroundPosition = '';
@@ -130,7 +132,7 @@
                     container.style.background = `url(${image}), ${rgrad},${repeatGrad}`;
                     container.style.backgroundBlendMode = "overlay";
                     container.style.backgroundSize = "cover";
-                } else if (evt.keyCode == 88 || evt.keyCode == 120) { //x
+                } else if (evt.keyCode == "x".charCodeAt(0) || evt.keyCode == "X".charCodeAt(0)) { //x
                     reset();
                     var container = document.getElementById('container');
                     // container.setAttribute("class", "pencil-effect");
@@ -155,6 +157,15 @@
                     container.style.backgroundRepeat = 'no-repeat, no-repeat, repeat';
                     container.style.backgroundBlendMode = 'color';
 
+                } else if (evt.keyCode == "s".charCodeAt(0) || evt.keyCode == "S".charCodeAt(0)) { //b
+                    reset();
+                    let container = document.getElementById('container');
+                    container.style.backgroundImage = `url(${image})`;
+                    container.style.filter = 'blur(5px) sepia(100%)';
+                } else if (evt.keyCode == "o".charCodeAt(0) || evt.keyCode == "O".charCodeAt(0)) { //b
+                    reset();
+                    let container = document.getElementById('container');
+                    container.style.backgroundImage = `url(${image})`;
                 }
             };
 
@@ -163,42 +174,10 @@
 
             ws.onmessage = function (data) {
                 image = data.data;
-                // img.src = data.data;
-                // img2.src = data.data;
-
-
-                //apply pencil effect
-                // var body = document.getElementsByTagName('body')[0];
-                // body.style.backgroundImage = `url(${data.data})`, `url(${data.data})`;
-                // var img = document.querySelector("#img")
-                // img.style.backgroundImage = `url(${data.data})`, `url(${data.data})`;
-                // img.setAttribute("class", "pencil-effect");
-
-                // var body = document.getElementsByTagName('body');
-                // body[0].style.backgroundImage = `url(${data.data})`, `url(${data.data})`;
 
                 var container = document.getElementById('container');
-                // container.style.background = '';
-                // container.style.backgroundSize = '';
-                // container.style.backgroundRepeat = '';
-                // container.style.backgroundSize = '';
-                // container.style.backgroundRepeat = '';
-                // container.style.backgroundBlendMode = '';
                 reset();
                 container.style.backgroundImage = `url(${data.data})`, `url(${data.data})`;
-                
-
-
-                // body[0].setAttribute("class", "pencil-effect");
-                // body[0].style.backgroundSize = 'cover';
-                // body[0].style.backgroundBlendMode = 'difference';
-                // body[0].style.backgroundPosition = "1px 1px, 2px 2px";
-                // body[0].style.filter = 'brightness(3) invert(1) grayscale(1)';
-
-                // body[0].style.filter = 'brightness(2) invert(1) grayscale(1)';
-                // body[0].style.boxShadow = 'inset 0 0 0 1px black';
-
-
             };
 
         })();
