--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
 
         .instructions {
             opacity: 0.8;
-            z-index: 1;
+            z-index: 99;
             position: absolute;
             width: 150px;
             height: 200px;
@@ -41,28 +41,11 @@
             left: 170px;
             border: 1px dashed #990000;
             background-color: #ffdddd;
+            filter: none;
+            background-size: cover;
             /* text-align: center; */
-
         }
 
-        /* #container {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-        }
-
-        #img {
-            width: 100%;
-            display: block;
-        } */
-
-        /*
-#img2 {
-    width: 50%;
-    display: inline-block;
-} */
-
-        /* .row { display: flex; } .column { flex: 33.33%; padding: 5px; } */
 
         .pencil-effect {
             /* $url : url(photo.jpg); */
@@ -88,11 +71,13 @@
         <div class="instructions">
             <p>Press key for effect</p>
             <ul>
-                <li>o: original</li>
-                <li>x: xray</li>
+                <li>f: freeze toggle</li>
                 <li>n: night vision</li>
-                <li>w: warhole</li>
+                <li>o: original</li>
                 <li>s: smoke</li>
+                <li>w: warhole</li>
+                <li>x: xray</li>
+               
             </ul>
         </div>
     </div>
@@ -101,7 +86,7 @@
     <script>
         (function () {
 
-            function reset(){
+            function reset() {
                 var container = document.getElementById('container');
                 container.style.background = '';
                 container.style.backgroundSize = '';
@@ -112,6 +97,7 @@
                 container.style.filter = '';
             }
             var image = '';
+            var freeze = false;
             "use strict";
 
             var container = document.getElementById("container");
@@ -142,12 +128,12 @@
                     container.style.backgroundPosition = "1px 1px, 2px 2px";
                     container.style.filter = 'brightness(3) invert(1) grayscale(1)';
                 } else if (evt.keyCode == "w".charCodeAt(0) || evt.keyCode == "W".charCodeAt(0)) { //b
-                    reset();    
+                    reset();
                     var container = document.getElementById('container');
                     container.style.backgroundImage = `url(${image})`;
                     container.style.backgroundSize = 'cover';
                     container.style.backgroundPosition = 'center';
-     
+
                     var linGrad1 = 'linear-gradient(#14EBFF 0,#14EBFF 50%,#FFFF70 50%,#FFFF70 100%)';
                     var linGrad2 = 'linear-gradient(#FF85DA 0,#FF85DA 50%,#AAA 50%,#AAA 100%)';
 
@@ -166,6 +152,8 @@
                     reset();
                     let container = document.getElementById('container');
                     container.style.backgroundImage = `url(${image})`;
+                } else if (evt.keyCode == "f".charCodeAt(0) || evt.keyCode == "F".charCodeAt(0)) { //b
+                    freeze = !freeze;
                 }
             };
 
@@ -173,11 +161,13 @@
             var ws = new WebSocket("ws://localhost:9091");
 
             ws.onmessage = function (data) {
-                image = data.data;
+                if (!freeze) {
+                    image = data.data;
 
-                var container = document.getElementById('container');
-                reset();
-                container.style.backgroundImage = `url(${data.data})`, `url(${data.data})`;
+                    var container = document.getElementById('container');
+                    reset();
+                    container.style.backgroundImage = `url(${data.data})`, `url(${data.data})`;
+                }
             };
 
         })();
